@@ -91,6 +91,10 @@
     * Added $HOSTURL$ and $SERVICEURL$ to notification macros which contain an
       URL to the host/service details views with /check_mk/... as base.
 
+    Notifications:
+    * FIX: Removing GRAPH_CODE in html mails when not available
+    * Using plugin argument 1 for path to pnp4nagios index php to render graphs
+
     Multisite:
     * FIX: Fixed umlaut handling in reloaded snapins
 
